--- a/main.html
+++ b/main.html
@@ -115,30 +115,38 @@
 
   <!-- navbar -->
   <div class="h-[95px] py-4 px-6 w-full bg-[#101323] fixed top-[calc(100vh-95px)] rounded-t-[20px] flex justify-between">
+    <a href="main.html">
     <div class="grid gap-y-[4px] text-center text-white font-[500] text-[9px] w-16">
         <div class="rounded-full bg-blue w-[48px] h-[48px] flex mx-auto">
             <img src="img/home.svg" class="w-1/2 mx-auto my-auto" alt="home">
         </div>
         <p>Главная</p>
     </div>
+    </a>
+    <a href="unions.html">
     <div class="grid gap-y-[4px] text-center text-white font-[500] text-[9px] w-16">
         <div class="rounded-full w-[48px] h-[48px] flex mx-auto">
             <img src="img/union.svg" class="w-1/2 mx-auto my-auto" alt="home">
         </div>
         <p>Объединения</p>
     </div>
+    </a>
+    <a href="event_catalog.html">
     <div class="grid gap-y-[4px] text-center text-white font-[500] text-[9px] w-16">
         <div class="rounded-full w-[48px] h-[48px] flex mx-auto">
             <img src="img/afisha.svg" class="w-1/2 mx-auto my-auto" alt="home">
         </div>
         <p>Мероприятия</p>
     </div>
+    </a>
+    <a href="calendar.html">
     <div class="grid gap-y-[4px] text-center text-white font-[500] text-[9px] w-16">
         <div class="rounded-full w-[48px] h-[48px] flex mx-auto">
             <img src="img/calendar.svg" class="w-1/2 mx-auto my-auto" alt="home">
         </div>
         <p>Расписание</p>
     </div>
+    </a>
   </div>
 </body>
 </html>
